# joc-2018-2019-q1

./: .gitignore  AICancellara-v1.cc  AICancellara.cc  AIDummy.o.MacOS  AIJutge.cc  AIPrevious.cc  AIProva.cc  AIProvav2.cc  AIQuim-v1.cc  AIQuim-v2.cc  AIQuim.cc  AIRufus.cc  CMakeLists.txt  Makefile  evaluate  newversion  release  run  run-quim  view
Viewer/: viewer.html  viewer.js
evaluator/: index.coffee  package-lock.json  package.json
